tests/toy/neg/000561_mutation.toylang
program a = { a = a + sleep a; } .
